<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/meduza"
    tools:context=".MainActivity"
    android:id="@+id/root_element">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/title_layout"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button_layout"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:text="@string/Meduza_string"
            android:textColor="@color/md_white_1000"
            android:textSize="35sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/textView2"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Meduza_string_after" />
    </LinearLayout>

    <TextView
        android:id="@+id/twBottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Meduza_string_bottom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:id="@+id/button_layout"
        android:layout_above="@+id/twBottom"
        android:layout_margin="20dp"
        android:layout_below="@+id/text_layout"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/SignIn_btn"
            android:background="@drawable/textview_shape"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/Register_btn"
            android:background="@drawable/textview_shape"/>
    </LinearLayout>
</RelativeLayout>